--- a/README
+++ b/README
@@ -9,4 +9,4 @@ This project builds a commandline mp4/m4v tagger called MP4Tagger. It is based u
 
 
 ++++++++++ WARNING ++++++++++
-This project is not being updated as Subler has released a fully functional commandline tool. This project was created prior to this fact, and the need for this has disappeared. That said, please feel free to use or modify the code in anyway toy see fit.
+This project is not being updated as Subler has released a fully functional commandline tool. This project was created prior to this fact, and the need for this has disappeared. That said, please feel free to use or modify the code in any way you see fit.
